# cross-border-tax-compliance-engine

./: .gitignore  Dockerfile  LICENSE  LICENSE-COMMERCIAL  LICENSE-MIT  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
connectors/: csv_handler.py  excel_handler.py
core/calculators/: __init__.py  base.py  de_calculator.py  jp_calculator.py  uk_calculator.py  us_calculator.py
core/models/: tax_models.py
core/rules/: de.json  jp.json  uk.json  us.json
core/utils/: decimal_calc.py  exchange_rate.py
ee/: __init__.py
ee/ai_engine/: __init__.py
ee/api_sync/: __init__.py
ee/auth/: __init__.py
ee/reports/: __init__.py
interface/api/: app.py
interface/cli/: main.py
interface/web/: app.py
tests/: conftest.py  test_api.py
tests/cases_uk/: test_uk_vat.py
tests/cases_us/: test_us_sales_tax.py
