[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross-border-tax-calc"
version = "0.1.0"
description = "开源跨境财税合规计算引擎"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "click>=8.1",
    "streamlit>=1.28",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
]

[project.scripts]
tax-calc = "interface.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "connectors", "interface", "ee"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
